fix/mediaJS прака медиазапросов + JS функционал

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <a
               href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN"
               target="_blank"
-              class="bike__system-name text_color"
+              class="bike__system-name text_color-mob"
               >Cervelo Caledonia-5</a
             >
           </li>
@@ -234,7 +234,7 @@
             <a
               href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
               target="_blank"
-              class="bike__system-name text_color"
+              class="bike__system-name text_color-mob"
               >Cannondale Systemsix Himod</a
             >
           </li>
@@ -247,7 +247,7 @@
             <a
               href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
               target="_blank"
-              class="bike__system-name text_color"
+              class="bike__system-name text_color-mob"
               >Trek Domane SL-7</a
             >
           </li>
@@ -297,8 +297,8 @@
         <input
           class="footer-form__input input_color-bgc"
           type="email"
-          name=""
-          id=""
+          name="input-email"
+          id="input-email"
           placeholder="Ваш e-mail"
           required
         />
@@ -323,7 +323,11 @@
             class="footer__container-moon"
           />
         </div>
-        <img class="footer__logo" src="./images/icons/logo.svg" alt="" />
+        <img
+          class="footer__logo"
+          src="./images/icons/logo.svg"
+          alt="Логотип - ведущая шестерня велосипеда"
+        />
       </div>
     </footer>
     <script src="./js/main-exp.js" defer></script>
