fix: исправления после ревью 1

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           </li>
         </ul>
         <div class="bike-dot">
-          <span class="bike-dot__item bike-dot__item_active"></span>
+          <span class="bike-dot__item"></span>
           <span class="bike-dot__item"></span>
           <span class="bike-dot__item"></span>
         </div>
@@ -295,7 +295,7 @@
       <h2 class="footer__title text_color">Подпишитесь на рассылку&nbsp;—</h2>
       <form action="#" name="getemail" class="footer-form">
         <input
-          class="footer-form__input input_color-bgc"
+          class="footer-form__input"
           type="email"
           name="input-email"
           id="input-email"
@@ -330,6 +330,6 @@
         />
       </div>
     </footer>
-    <script src="./js/main-exp.js" defer></script>
+    <script src="./js/index.js" defer></script>
   </body>
 </html>
